// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedImage renders correctly 1`] = `
<a
  aria-label={undefined}
  className="css-class-name"
  href="url-link"
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
>
  <img
    alt="alt-text"
    className={undefined}
    src="image-src"
  />
</a>
`;

exports[`LinkedImage renders correctly 2`] = `
<a
  aria-label={undefined}
  className="css-class-name"
  href="url-link"
  onClick={undefined}
  tabIndex={0}
  target="new_window"
  title={undefined}
>
  <img
    alt="alt-text"
    className={undefined}
    src="image-src"
  />
</a>
`;

exports[`LinkedImage renders correctly 3`] = `
<a
  aria-label={undefined}
  className="css-class-name"
  href="url-link"
  onClick={undefined}
  tabIndex={0}
  target="new_window"
  title={undefined}
>
  <img
    alt="alt-text"
    className={undefined}
    src="image-src"
  />
</a>
`;
